--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </button>
                 <ul class="dropdown-menu dropdown-menu-dark">
                   <li><a class="dropdown-item" href="https://www.youtube.com/@bagasgtg6743">Youtube</a></li>
-                  <li><a class="dropdown-item" href="https://www.instagram.com/bgsprtama_17/">instagram</a></li>
+                  <li><a class="dropdown-item" href="https://www.instagram.com/fidzz_gz/">instagram</a></li>
                   <li><a class="dropdown-item" href="https://www.tiktok.com/@bagasprtma17">Tiktok</a></li>
                   <li><a class="dropdown-item" href="https://wa.me/6285962688581?text=Assalamualaikum,bro">Contact Me</a></li>
               </li>
